--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "PR Monitor",
   "version": "0.0.0",
   "description": "Get notified when you receive a pull request on GitHub.",
   "permissions": ["alarms", "notifications", "storage"],
   "optional_permissions": ["tabs"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": true
+    "service_worker": "background.js",
+    "type": "module"
   },
-  "browser_action": {
+  "action": {
     "default_popup": "index.html#popup"
   },
   "icons": {
